# sapling

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  configure.ac  sapling.1
docs/: index.md  parser_actions.txt  ulisp.md
include/: compose.h  data.h  eval.h  input_stream.h  internal_lexer.h  internal_parser.h  lexer.h  lexer_action.h  options.h  output_stream.h  parse_tree_stack.h  parser.h  parser_actions.h  runtime_compiler.h  state_stack.h
include/aux/: compiler_cache.h  int_trie.h  parse_tree_stack.h  state_stack.h  string_list.h  string_to_int_avl.h  ulisp_parse_tree_list.h
include/ulisp/: ulisp.h
lang/: meta
spec/: composition  dragon_book_slr_example  lisp  meta  ulisp
spec/sample/: 6502_to_bin  hex_to_bin  lists  u6502  ulisp_sandbox  ulisp_to_6502  uppercase_text_to_bin
spec/vegetables/: castilian_to_catalan  catalan_to_polish  english_to_castilian
src/: autogen_lexer.c  autogen_lexer_actions.c  autogen_parser_actions0.c  autogen_productions.h  autogen_terminals.h  compose.c  eval.c  input_stream.c  internal_lexer.c  internal_parser.c  lexer.h  main.c  mangen_combined_ids.h  mangen_lexer.c  mangen_lexer_actions.c  mangen_parser.c  mangen_parser_actions0.c  mangen_parser_post_reduce_action1.c  mangen_parser_post_state_action1.c  mangen_parser_pre_shift_action1.c  mangen_parser_pre_state_action1.c  mangen_production_attributed_actions2.c  mangen_productions.h  mangen_terminals.h  mangen_tokens.h  mangen_user_data.h  output_stream.c  parser.c  parser.h  runtime_compiler.c  stack_int.c  stack_int.h  token.c  token.h
src/aux/: compiler_cache.c  string_to_int_avl.c
src/composition/: composition_lexer.c  composition_lexer.h  composition_parser.c  composition_parser.h  get_grammar_symbol_index_from_string.c  lexer_actions.c  nonterminals.h  parser_actions.h  parser_actions0.c  parser_post_reduce_action1.c  parser_post_state_action1.c  parser_pre_shift_action1.c  parser_pre_state_action1.c  parser_production_attributed_actions2.c  productions.h  terminals.h
src/meta/: get_grammar_symbol_index_from_string.c  lexer_actions.c  meta_lexer.c  meta_lexer.h  meta_parser.c  meta_parser.h  nonterminals.h  parser_actions.h  parser_actions0.c  parser_post_reduce_action1.c  parser_post_state_action1.c  parser_pre_shift_action1.c  parser_pre_state_action1.c  parser_production_attributed_actions2.c  print_lexer_output_only.c  productions.h  terminals.h
src/ulisp/: get_grammar_symbol_index_from_string.c  lexer_actions.c  nonterminals.h  parser_actions.h  parser_actions0.c  parser_post_reduce_action1.c  parser_post_state_action1.c  parser_pre_shift_action1.c  parser_pre_state_action1.c  parser_production_attributed_actions2.c  productions.h  terminals.h  ulisp_lexer.c  ulisp_lexer.h  ulisp_parser.c  ulisp_parser.h
test/: ulisp_sandbox_input
test/6502/: game.nes  input_file  input_file_win  rom.nes
test/lists/: input_file
test/vegetables/: input_file  output_file
tools/: autofiles  cloc_manual  print_git_version  viz_ulisp_parse_trees
tools/regen/: actions_templates  all  lexer_actions_c  lexer_c  parser  parser_actions0_c  productions_h  regen  terminals_h
tools/regen/files/: lexer_c  (+13 more)
